--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -25,7 +25,7 @@
                         <!-- <a href="#">
                             <img src="../../../front/images/avatars/avatar-2.jpg" class="bg-gray-200 border border-white rounded-full w-10 h-10">
                         </a> -->
-                        <div class="flex-1 font-semibold capitalize" style="padding-left: 5vw;">
+                        <div class="flex-1 font-semibold capitalize">
                             <h3 class="text-lg font-semibold">
                                 <%= konu.title %>
                             </h3>
@@ -37,7 +37,7 @@
                     <div class="p-4 space-y-3">
                         <div class="border-t py-4 space-y-4 dark:border-gray-600" style="width: 100%;">
                             <% konu.comment.forEach(element=> { %>
-                                <div class="profiles_content" style="padding-top: 20px; padding-left: 10px;">
+                                <div class="profiles_content" style="padding-top: 25px; padding-left: 10px;">
                                     <table>
                                         <tr>
                                             <td>
