--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -37,7 +37,7 @@
                     <div class="p-4 space-y-3">
                         <div class="border-t py-4 space-y-4 dark:border-gray-600" style="width: 100%;">
                             <% konu.comment.forEach(element=> { %>
-                                <div class="profiles_content" style="padding-top: 25px; padding-left: 10px;">
+                                <div class="profiles_content" style="padding-top: 25px;">
                                     <table>
                                         <tr>
                                             <td>
