--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -51,8 +51,8 @@
 
                                                                 </td>
                                                                 <td>
-                                                                    <h3 class="text-lg font-semibold"
-                                                                        style="color: crimson; text-align: right;">
+                                                                    <h3
+                                                                        style=" text-align: right;">
                                                                         Abdullah</h3>
 
                                                                 </td>
@@ -92,14 +92,14 @@
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 20vw;" class="text-2xl"
+                                                            <ion-icon style="padding-left: 30vw;" class="text-2xl"
                                                                 name="heart-outline"></ion-icon>
                                                             <span class="text-sm">22</span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 20vw;" class="text-2xl"
+                                                            <ion-icon style="padding-left: 30vw;" class="text-2xl"
                                                                 name="trash-outline"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
