--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -55,6 +55,7 @@
                     </div>
                     <hr style="background-color: steelblue; height: 1px; border: 0; margin-bottom: 10px;">
                     <ul class="space-y-6">
+                        <img src="../../bbanner.png" alt="">
                         <% sozluk.forEach(element => { %>
                             <li style="margin-top: 4px;">
                                 <a href="/single/<%= element._id %>">
@@ -110,6 +111,7 @@
                     <div uk-sticky="offset:100" class="uk-sticky">
 
                         <h2 class="text-2xl font-semibold mb-3"> Son Eklenen Konular </h2>
+                        <img src="../../banner.jpg" alt="">
                         <ul>
                             <% sozluk.forEach(element => { %>
                                 <li>
