--- a/views/front/auth/login.ejs
+++ b/views/front/auth/login.ejs
@@ -78,6 +78,10 @@
                             <button type="submit" class="bg-blue-600 font-semibold p-2 mt-5 rounded-md text-center text-white w-full">
                                 Giriş Yap</button>
                         </div>
+                        <br>
+                        <div>
+                            <a href="/users/register" class="text-center"><b>Üyeliğiniz yoksa hemen kayıt olun !</b></a>
+                        </div> 
                     </form>
 
 
