--- a/views/front/auth/register2.ejs
+++ b/views/front/auth/register2.ejs
@@ -61,6 +61,7 @@
         <div>
             <div class="lg:p-12 max-w-xl lg:my-0 my-12 mx-auto p-6 space-y-">
                 <form class="lg:p-10 p-6 space-y-3 relative bg-white shadow-xl rounded-md" action="/users/register" method="POST">
+                        <a href="/users/login" class="uk-link text-primary">Zaten bir hesabınız var mı ? <b>Giriş Yap</b></a>
                     <h1 class="lg:text-2xl text-xl font-semibold mb-6"> Kayıt Ol </h1>
 
                     <div class="grid lg:grid-cols-2 gap-3">
