--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -99,11 +99,11 @@
                                     <a href="/profil">
                                         <img src="../../../front/images/avatars/avatar-2.jpg" class="is_avatar" alt="">
                                     </a>
-                                    <% }else{ %>
-                                        <a href="/users/login">
-                                            <ion-icon name="person-outline" class="text-2xl"></ion-icon>
-                                        </a>
-                                        <% } %>
+                                <% }else{ %>
+                                    <a href="/users/login">
+                                        <ion-icon name="person-outline" style="color: gray;" class="text-3xl"></ion-icon>
+                                    </a>
+                                <% } %>
 
                                             <!-- <div uk-drop="mode: click;offset:5" class="header_dropdown profile_dropdown">
                                     <a href="timeline.html" class="user">
