--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -100,7 +100,7 @@
                                         <img src="../../../front/images/avatars/avatar-2.jpg" class="is_avatar" alt="">
                                     </a>
                                     <% }else{ %>
-                                        <a href="#" id="gizle" class="is_icon">
+                                        <a href="/users/login" id="gizle" class="is_icon">
                                             <svg height="512" viewBox="0 0 512 512" width="512"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <g>
