--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -91,98 +91,100 @@
                             </div>
                             <i class="uil-search-alt"></i>
                         </div>
-                        <div class="right_side" style="margin-right: -15vw;">
-                            <div class="header_widgets">
-                                <a href="#" class="is_link"> Anasayfa </a>
-                                <a href="#" class="is_link"> Abdullah Bektaş </a>
-                                <% if (user) { %>
-                                    <a href="/profil">
-                                        <img src="../../../front/images/avatars/avatar-2.jpg" class="is_avatar" alt="">
-                                    </a>
-                                    <% }else{ %>
-                                        <a href="/users/login" id="gizle" class="is_icon">
-                                            <svg height="512" viewBox="0 0 512 512" width="512"
-                                                xmlns="http://www.w3.org/2000/svg">
-                                                <g>
-                                                    <path fill="gray" d="M437.02,330.98c-27.883-27.882-61.071-48.523-97.281-61.018C378.521,243.251,404,198.548,404,148
-			C404,66.393,337.607,0,256,0S108,66.393,108,148c0,50.548,25.479,95.251,64.262,121.962
-			c-36.21,12.495-69.398,33.136-97.281,61.018C26.629,379.333,0,443.62,0,512h40c0-119.103,96.897-216,216-216s216,96.897,216,216
-			h40C512,443.62,485.371,379.333,437.02,330.98z M256,256c-59.551,0-108-48.448-108-108S196.449,40,256,40
-			c59.551,0,108,48.448,108,108S315.551,256,256,256z"/>
-                                                </g>
-                                            </svg>
+                        <% if (!user) { %>
+                            <div class="right_side" style="margin-right: -15vw;">
+                                <div class="header_widgets">
+                                    <a href="#" class="is_link"> Anasayfa </a>
+                                    <a href="#" class="is_link"> Abdullah Bektaş </a>
+                                    <% if (user) { %>
+                                        <a href="/profil">
+                                            <img src="../../../front/images/avatars/avatar-2.jpg" class="is_avatar" alt="">
                                         </a>
-                                        <% } %>
-
-                                            <!-- <div uk-drop="mode: click;offset:5" class="header_dropdown profile_dropdown">
-                                    <a href="timeline.html" class="user">
-                                        <div class="user_avatar">
-                                            <img src="../../../front/images/avatars/avatar-2.jpg" alt="">
-                                        </div>
-                                        <div class="user_name">
-                                            <div> Abdullah Bektaş </div>
-                                        </div>
-                                    </a>
-                                    <hr class="border-gray-100">
-                                    <a href="page-setting.html">
-                                        <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd"
-                                                d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z"
-                                                clip-rule="evenodd"></path>
-                                        </svg>Hesabım
-                                    </a>
-                                    <a href="/users/logout">
-                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                            stroke="currentColor">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1">
-                                            </path>
-                                        </svg> Çıkış Yap
-                                    </a>
-                                </div> -->
-                                            <a href="#" id="gizle" class="is_icon">
+                                        <% }else{ %>
+                                            <a href="/users/login" id="gizle" class="is_icon">
                                                 <svg height="512" viewBox="0 0 512 512" width="512"
                                                     xmlns="http://www.w3.org/2000/svg">
                                                     <g>
-                                                        <path fill="gray" d="M440.1,422.7l-28-315.3c-0.6-7-6.5-12.3-13.4-12.3h-57.6C340.3,42.5,297.3,0,244.5,0s-95.8,42.5-96.6,95.1H90.3
-            c-7,0-12.8,5.3-13.4,12.3l-28,315.3c0,0.4-0.1,0.8-0.1,1.2c0,35.9,32.9,65.1,73.4,65.1h244.6c40.5,0,73.4-29.2,73.4-65.1
-            C440.2,423.5,440.2,423.1,440.1,422.7z M244.5,27c37.9,0,68.8,30.4,69.6,68.1H174.9C175.7,57.4,206.6,27,244.5,27z M366.8,462
-            H122.2c-25.4,0-46-16.8-46.4-37.5l26.8-302.3h45.2v41c0,7.5,6,13.5,13.5,13.5s13.5-6,13.5-13.5v-41h139.3v41
-            c0,7.5,6,13.5,13.5,13.5s13.5-6,13.5-13.5v-41h45.2l26.9,302.3C412.8,445.2,392.1,462,366.8,462z" />
+                                                        <path fill="gray" d="M437.02,330.98c-27.883-27.882-61.071-48.523-97.281-61.018C378.521,243.251,404,198.548,404,148
+                C404,66.393,337.607,0,256,0S108,66.393,108,148c0,50.548,25.479,95.251,64.262,121.962
+                c-36.21,12.495-69.398,33.136-97.281,61.018C26.629,379.333,0,443.62,0,512h40c0-119.103,96.897-216,216-216s216,96.897,216,216
+                h40C512,443.62,485.371,379.333,437.02,330.98z M256,256c-59.551,0-108-48.448-108-108S196.449,40,256,40
+                c59.551,0,108,48.448,108,108S315.551,256,256,256z"/>
                                                     </g>
                                                 </svg>
                                             </a>
-                                            <a href="#" id="gizle" class="is_icon"
-                                                uk-toggle="target: #create-post-modal">
-                                                <img src="../../../color-pencil.png" height="30px">
-
-                                            </a>
-                                            <a href="#" class="is_icon">
-                                                <svg id="Layer_1" enable-background="new 0 0 512 512" height="512"
-                                                    viewBox="0 0 512 512" width="512"
-                                                    xmlns="http://www.w3.org/2000/svg">
-                                                    <path fill="gray"
-                                                        d="m450.201 407.453c-1.505-.977-12.832-8.912-24.174-32.917-20.829-44.082-25.201-106.18-25.201-150.511 0-.193-.004-.384-.011-.576-.227-58.589-35.31-109.095-85.514-131.756v-34.657c0-31.45-25.544-57.036-56.942-57.036h-4.719c-31.398 0-56.942 25.586-56.942 57.036v34.655c-50.372 22.734-85.525 73.498-85.525 132.334 0 44.331-4.372 106.428-25.201 150.511-11.341 24.004-22.668 31.939-24.174 32.917-6.342 2.935-9.469 9.715-8.01 16.586 1.473 6.939 7.959 11.723 15.042 11.723h109.947c.614 42.141 35.008 76.238 77.223 76.238s76.609-34.097 77.223-76.238h109.947c7.082 0 13.569-4.784 15.042-11.723 1.457-6.871-1.669-13.652-8.011-16.586zm-223.502-350.417c0-14.881 12.086-26.987 26.942-26.987h4.719c14.856 0 26.942 12.106 26.942 26.987v24.917c-9.468-1.957-19.269-2.987-29.306-2.987-10.034 0-19.832 1.029-29.296 2.984v-24.914zm29.301 424.915c-25.673 0-46.614-20.617-47.223-46.188h94.445c-.608 25.57-21.549 46.188-47.222 46.188zm60.4-76.239c-.003 0-213.385 0-213.385 0 2.595-4.044 5.236-8.623 7.861-13.798 20.104-39.643 30.298-96.129 30.298-167.889 0-63.417 51.509-115.01 114.821-115.01s114.821 51.593 114.821 115.06c0 .185.003.369.01.553.057 71.472 10.25 127.755 30.298 167.286 2.625 5.176 5.267 9.754 7.861 13.798z" />
-                                                </svg>
-                                            </a>
-                                            <a href="#" class="is_icon">
-                                                <svg height="682pt" viewBox="-21 -47 682.66669 682" width="682pt"
-                                                    xmlns="http://www.w3.org/2000/svg">
-                                                    <path fill="gray"
-                                                        d="m552.011719-1.332031h-464.023438c-48.515625 0-87.988281 39.464843-87.988281 87.988281v283.972656c0 48.414063 39.300781 87.816406 87.675781 87.988282v128.863281l185.191407-128.863281h279.144531c48.515625 0 87.988281-39.472657 87.988281-87.988282v-283.972656c0-48.523438-39.472656-87.988281-87.988281-87.988281zm50.488281 371.960937c0 27.835938-22.648438 50.488282-50.488281 50.488282h-290.910157l-135.925781 94.585937v-94.585937h-37.1875c-27.839843 0-50.488281-22.652344-50.488281-50.488282v-283.972656c0-27.84375 22.648438-50.488281 50.488281-50.488281h464.023438c27.839843 0 50.488281 22.644531 50.488281 50.488281zm0 0" />
-                                                    <path fill="gray"
-                                                        d="m171.292969 131.171875h297.414062v37.5h-297.414062zm0 0" />
-                                                    <path fill="gray"
-                                                        d="m171.292969 211.171875h297.414062v37.5h-297.414062zm0 0" />
-                                                    <path fill="gray"
-                                                        d="m171.292969 291.171875h297.414062v37.5h-297.414062zm0 0" />
-                                                </svg>
-                                                <!-- <span>4</span> -->
-                                            </a>
-
+                                            <% } %>
+    
+                                                <!-- <div uk-drop="mode: click;offset:5" class="header_dropdown profile_dropdown">
+                                        <a href="timeline.html" class="user">
+                                            <div class="user_avatar">
+                                                <img src="../../../front/images/avatars/avatar-2.jpg" alt="">
+                                            </div>
+                                            <div class="user_name">
+                                                <div> Abdullah Bektaş </div>
+                                            </div>
+                                        </a>
+                                        <hr class="border-gray-100">
+                                        <a href="page-setting.html">
+                                            <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd"
+                                                    d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z"
+                                                    clip-rule="evenodd"></path>
+                                            </svg>Hesabım
+                                        </a>
+                                        <a href="/users/logout">
+                                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                                stroke="currentColor">
+                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                    d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1">
+                                                </path>
+                                            </svg> Çıkış Yap
+                                        </a>
+                                    </div> -->
+                                                <a href="#" id="gizle" class="is_icon">
+                                                    <svg height="512" viewBox="0 0 512 512" width="512"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <g>
+                                                            <path fill="gray" d="M440.1,422.7l-28-315.3c-0.6-7-6.5-12.3-13.4-12.3h-57.6C340.3,42.5,297.3,0,244.5,0s-95.8,42.5-96.6,95.1H90.3
+                c-7,0-12.8,5.3-13.4,12.3l-28,315.3c0,0.4-0.1,0.8-0.1,1.2c0,35.9,32.9,65.1,73.4,65.1h244.6c40.5,0,73.4-29.2,73.4-65.1
+                C440.2,423.5,440.2,423.1,440.1,422.7z M244.5,27c37.9,0,68.8,30.4,69.6,68.1H174.9C175.7,57.4,206.6,27,244.5,27z M366.8,462
+                H122.2c-25.4,0-46-16.8-46.4-37.5l26.8-302.3h45.2v41c0,7.5,6,13.5,13.5,13.5s13.5-6,13.5-13.5v-41h139.3v41
+                c0,7.5,6,13.5,13.5,13.5s13.5-6,13.5-13.5v-41h45.2l26.9,302.3C412.8,445.2,392.1,462,366.8,462z" />
+                                                        </g>
+                                                    </svg>
+                                                </a>
+                                                <a href="#" id="gizle" class="is_icon"
+                                                    uk-toggle="target: #create-post-modal">
+                                                    <img src="../../../color-pencil.png" height="30px">
+    
+                                                </a>
+                                                <a href="#" class="is_icon">
+                                                    <svg id="Layer_1" enable-background="new 0 0 512 512" height="512"
+                                                        viewBox="0 0 512 512" width="512"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path fill="gray"
+                                                            d="m450.201 407.453c-1.505-.977-12.832-8.912-24.174-32.917-20.829-44.082-25.201-106.18-25.201-150.511 0-.193-.004-.384-.011-.576-.227-58.589-35.31-109.095-85.514-131.756v-34.657c0-31.45-25.544-57.036-56.942-57.036h-4.719c-31.398 0-56.942 25.586-56.942 57.036v34.655c-50.372 22.734-85.525 73.498-85.525 132.334 0 44.331-4.372 106.428-25.201 150.511-11.341 24.004-22.668 31.939-24.174 32.917-6.342 2.935-9.469 9.715-8.01 16.586 1.473 6.939 7.959 11.723 15.042 11.723h109.947c.614 42.141 35.008 76.238 77.223 76.238s76.609-34.097 77.223-76.238h109.947c7.082 0 13.569-4.784 15.042-11.723 1.457-6.871-1.669-13.652-8.011-16.586zm-223.502-350.417c0-14.881 12.086-26.987 26.942-26.987h4.719c14.856 0 26.942 12.106 26.942 26.987v24.917c-9.468-1.957-19.269-2.987-29.306-2.987-10.034 0-19.832 1.029-29.296 2.984v-24.914zm29.301 424.915c-25.673 0-46.614-20.617-47.223-46.188h94.445c-.608 25.57-21.549 46.188-47.222 46.188zm60.4-76.239c-.003 0-213.385 0-213.385 0 2.595-4.044 5.236-8.623 7.861-13.798 20.104-39.643 30.298-96.129 30.298-167.889 0-63.417 51.509-115.01 114.821-115.01s114.821 51.593 114.821 115.06c0 .185.003.369.01.553.057 71.472 10.25 127.755 30.298 167.286 2.625 5.176 5.267 9.754 7.861 13.798z" />
+                                                    </svg>
+                                                </a>
+                                                <a href="#" class="is_icon">
+                                                    <svg height="682pt" viewBox="-21 -47 682.66669 682" width="682pt"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <path fill="gray"
+                                                            d="m552.011719-1.332031h-464.023438c-48.515625 0-87.988281 39.464843-87.988281 87.988281v283.972656c0 48.414063 39.300781 87.816406 87.675781 87.988282v128.863281l185.191407-128.863281h279.144531c48.515625 0 87.988281-39.472657 87.988281-87.988282v-283.972656c0-48.523438-39.472656-87.988281-87.988281-87.988281zm50.488281 371.960937c0 27.835938-22.648438 50.488282-50.488281 50.488282h-290.910157l-135.925781 94.585937v-94.585937h-37.1875c-27.839843 0-50.488281-22.652344-50.488281-50.488282v-283.972656c0-27.84375 22.648438-50.488281 50.488281-50.488281h464.023438c27.839843 0 50.488281 22.644531 50.488281 50.488281zm0 0" />
+                                                        <path fill="gray"
+                                                            d="m171.292969 131.171875h297.414062v37.5h-297.414062zm0 0" />
+                                                        <path fill="gray"
+                                                            d="m171.292969 211.171875h297.414062v37.5h-297.414062zm0 0" />
+                                                        <path fill="gray"
+                                                            d="m171.292969 291.171875h297.414062v37.5h-297.414062zm0 0" />
+                                                    </svg>
+                                                    <!-- <span>4</span> -->
+                                                </a>
+    
+                                </div>
+    
                             </div>
-
-                        </div>
+                        <% } %>
                     </div>
                 </div>
             </header>
