--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -76,7 +76,7 @@
                                     </svg>
                                 </a>
                             <% }else{ %>
-                                <a class="slide_menu" id="gizle" href="/setting">
+                                <a class="slide_menu" id="gizle" href="/users/login">
                                     <svg id="Layer_1" enable-background="new 0 0 512 512" height="512" viewBox="0 0 512 512"
                                         width="512" xmlns="http://www.w3.org/2000/svg"><g>
                                             <path fill="gray" d="M437.02,330.98c-27.883-27.882-61.071-48.523-97.281-61.018C378.521,243.251,404,198.548,404,148
