--- a/views/front/profil.ejs
+++ b/views/front/profil.ejs
@@ -22,7 +22,13 @@
                         </tr>
                     </table>
                     
-                    <%= user.name %>  <br>
+                    <% if (user) { %>
+                        <%= user.item.name %>
+                    <% }else{ %>
+                    
+                    <% } %> 
+                    
+                    <br>
                     <small>233 Abone</small><br>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
                    
