--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -98,11 +98,28 @@
                         <div v-if="durum == 'true'" class="header-search-icon"
                             uk-toggle="target: #wrapper ; cls: show-searchbox"> </div>
                         <div class="header_search">
-                            <input value="" type="text" class="form-control" placeholder="Konu ara" autocomplete="off">
+                            <input value="" list="liste" type="text" class="form-control" placeholder="Konu ara" autocomplete="off">
                             <div @click="acKapa()" class="start-chat header-search-icon" id="gizle"
                                 uk-toggle="target: #wrapper ; cls: show-searchbox">
                             </div>
                             <i class="uil-search-alt"></i>
+                        </div>
+                        <div uk-drop="mode: click" class="hidden md:w-1/3 w-11/12 shadow-lg rounded-md -mt-2 bg-white">
+                            <datalist class="-mt-2 p-3" id="liste">
+                                <h4 class="font-semibold mb-1 mt-2 px-2.5 text-lg"> Recently  </h4>
+                                    <ul>
+                                        <% sozluk.forEach(element => { %>
+                                            <li>
+                                                <option style="background-color: white; height: 20px;">
+                                                    <a href="#" class="flex items-center space-x-2 p-2 hover:bg-gray-100 rounded-md"> 
+                                                        <img src="assets/images/avatars/avatar-4.jpg" alt="" class="border mr-3 rounded-full shadow-sm w-8">
+                                                        <%= element.title %> 
+                                                    </a>
+                                                </option>
+                                            </li>
+                                        <% }) %>
+                                    </ul>
+                            </datalist>
                         </div>
                         <% if (user) { %>
                             <div class="right_side" style="margin-right: -15vw;">
