--- a/views/front/guncelle.ejs
+++ b/views/front/guncelle.ejs
@@ -2,7 +2,7 @@
 
     <div class="main_content">
         <div class="mcontainer">
-            <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Hesap Ayarları</h2>
+            <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Profil Düzenle</h2>
             <span class="badge">
                 <table>
                     <tr>
