--- a/views/front/set/setting.ejs
+++ b/views/front/set/setting.ejs
@@ -30,7 +30,7 @@
             </span>
             <hr style="margin-top: 22px; border: 2px solid darkgray;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px; color: orangered;"> Çıkış Yap <ion-icon name="log-out-outline" style="float: right; font-size: 22pt;"></ion-icon> </h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px; color: orangered;"> <a href="/users/logout">Çıkış Yap</a> <ion-icon name="log-out-outline" style="float: right; font-size: 22pt;"></ion-icon> </h2>
             </span>
             <hr style="margin-top: 22px;">
         </div>
