--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -182,12 +182,14 @@
                     </select>
 
                     <div class="flex space-x-2">
-                        <a @click="konuEkle()" style="color: white;" class="bg-blue-600 flex h-9 items-center justify-center rounded-md text-white px-5 font-medium">
-                          Paylaş </a>
+                        <!-- <a @click="konuEkle()" style="color: white;" class="bg-blue-600 flex h-9 items-center justify-center rounded-md text-white px-5 font-medium">
+                          Paylaş </a> -->
+                          <img @click="konuEkle()" style="height: 30px;" src="../../paylas.png" class="">
                     </div>
 
-                    <a @click="konuEkle()" style="color: white;" hidden class="bg-blue-600 flex h-9 items-center justify-center rounded-lg text-white px-12 font-semibold">
-                        Paylaş </a>
+                    <!-- <a @click="konuEkle()" style="color: white;" hidden class="bg-blue-600 flex h-9 items-center justify-center rounded-lg text-white px-12 font-semibold">
+                        Paylaş </a> -->
+                        <img @click="konuEkle()" hidden style="height: 30px;" src="../../paylas.png" class="">
                 </div>
             </div>
         </div>
