--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -167,7 +167,7 @@
                                                 </a>
                                                 <a href="#" id="gizle" class="is_icon"
                                                     uk-toggle="target: #create-post-modal">
-                                                    <img src="../../../color-pencil.png" height="30px">
+                                                    <img src="../../../paylas.png" height="30px">
     
                                                 </a>
                                                 <a href="#" class="is_icon">
