--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -164,9 +164,9 @@
                     <!-- <button class="uk-modal-close-default bg-gray-100 rounded-full p-2.5 m-1 right-2" type="button" uk-close uk-tooltip="title: Close ; pos: bottom ;offset:7"></button> -->
                 </div>
                 <div class="flex flex-1 items-start space-x-4 p-5">
-                    <img src="../../../front/images/avatars/avatar-2.jpg" class="bg-gray-200 border border-white rounded-full w-11 h-11">
+                    <!-- <img src="../../../front/images/avatars/avatar-2.jpg" class="bg-gray-200 border border-white rounded-full w-11 h-11"> -->
                     <div class="flex-1 pt-2">
-                        <textarea v-model="title" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none" rows="5" placeholder="Eklemek istediğiniz içeriği giriniz."></textarea>
+                        <textarea v-model="title" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none" rows="20" style="resize: vertical;"  placeholder="Eklemek istediğiniz içeriği giriniz."></textarea>
                     </div>
 
                 </div>
