--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -103,7 +103,7 @@
                             </div>
                             <i class="uil-search-alt"></i>
                         </div>
-                        <% if (!user) { %>
+                        <% if (user) { %>
                             <div class="right_side" style="margin-right: -15vw;">
                                 <div class="header_widgets">
                                     <a href="#" class="is_link"> Anasayfa </a>
