--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -167,6 +167,11 @@
                     <!-- <img src="../../../front/images/avatars/avatar-2.jpg" class="bg-gray-200 border border-white rounded-full w-11 h-11"> -->
                     <div class="flex-1 pt-2" style="border: 1px solid cornflowerblue;">
                         <textarea v-model="title" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none" rows="14"  placeholder="Eklemek istediğiniz içeriği giriniz."></textarea>
+                        <hr>
+                        <input type="text" class="uk-input" placeholder="@ornek">
+                        <hr>
+                        <input type="text" class="uk-input" placeholder="@ornek">
+                        
                     </div>
 
                 </div>
