--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -168,9 +168,9 @@
                     <div class="flex-1 pt-2" style="border: 1px solid cornflowerblue;">
                         <textarea v-model="title" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none" rows="14"  placeholder="Eklemek istediğiniz içeriği giriniz."></textarea>
                         <hr>
-                        <input type="text" class="uk-input" placeholder="@ornek">
+                        <input type="text" class="uk-input" placeholder="Link ">
                         <hr>
-                        <input type="text" class="uk-input" placeholder="@ornek">
+                        <input type="text" class="uk-input" placeholder="Kaynak">
                         
                     </div>
 
