--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -168,13 +168,11 @@
                     <div class="flex-1 pt-2" style="border: 1px solid cornflowerblue;">
                         <textarea v-model="title" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none" rows="14"  placeholder="Eklemek istediğiniz içeriği giriniz."></textarea>
                         <hr>
-                        <input type="text" class="uk-input" placeholder="Link ">
-                        <hr>
-                        <input type="text" class="uk-input" placeholder="Kaynak">
-                        
+                        <ion-icon name="link-outline" class="text-3xl" style="padding-left: 10px;"></ion-icon>
+                        <ion-icon name="book-outline" class="text-3xl" style="padding-left: 10px;"></ion-icon>
                     </div>
-
                 </div>
+                
                 <div class="bsolute bottom-0 p-4 space-x-4 w-full">
 
                 </div>
