--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -103,14 +103,14 @@
                             </div>
                             <i class="uil-search-alt"></i>
                         </div>
-                        <% if (user) { %>
+                        <% if (!user) { %>
                             <div class="right_side" style="margin-right: -15vw;">
                                 <div class="header_widgets">
                                     <a href="#" class="is_link"> Anasayfa </a>
                                     <a href="#" class="is_link"> Abdullah Bektaş </a>
                                     <% if (user) { %>
                                         <a href="/profil">
-                                            <img src="../../../front/images/avatars/avatar-2.jpg" class="is_avatar" alt="">
+                                          asd  <img src="../../../front/images/avatars/avatar-2.jpg" class="is_avatar" alt="">
                                         </a>
                                         <% }else{ %>
                                             <a href="/users/login" id="gizle" class="is_icon">
