--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -165,7 +165,7 @@
                 </div>
                 <div class="flex flex-1 items-start space-x-4 p-5">
                     <!-- <img src="../../../front/images/avatars/avatar-2.jpg" class="bg-gray-200 border border-white rounded-full w-11 h-11"> -->
-                    <div class="flex-1 pt-2" style="border: 1px solid cornflowerblue;">
+                    <div class="flex-1 pt-2" style="border: 1px solid cornflowerblue; border-radius: 20px;">
                         <textarea v-model="title" class="uk-textare text-black shadow-none focus:shadow-none text-xl font-medium resize-none" rows="14"  placeholder="Eklemek istediğiniz içeriği giriniz."></textarea>
                         
                     </div>
