--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -75,10 +75,10 @@
                                                 <table>
                                                     <tr>
                                                         <td>
-                                                            <div class="flex items-center">
+                                                            <!-- <div class="flex items-center">
                                                                 <ion-icon name="share-social-outline"></ion-icon>
                                                                 <span class="text-sm">22</span>
-                                                            </div>
+                                                            </div> -->
                                                         </td>
                                                         <td>
                                                             <div class="flex items-center">
