--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -59,7 +59,7 @@
                             <li style="margin-top: 4px;">
                                     <div class="flex items-start pl-3 space-x-4">
                                         <a href="/profil">
-                                        <img src="../../../front/images/avatars/avatar-2.jpg" style="width: 40px; height: 40px;" class="rounded-full">
+                                        <!-- <img src="../../../front/images/avatars/avatar-2.jpg" style="width: 40px; height: 40px;" class="rounded-full"> -->
                                         </a>
                                 <a href="/single/<%= element._id %>">
                                         
@@ -81,10 +81,10 @@
                                                             </div> -->
                                                         </td>
                                                         <td>
-                                                            <div class="flex items-center">
+                                                            <!-- <div class="flex items-center">
                                                                 <ion-icon style="padding-left: 20vw;" name="heart-outline"></ion-icon>
                                                                 <span class="text-sm">22</span>
-                                                            </div>
+                                                            </div> -->
                                                         </td>
                                                         <td>
                                                             <div class="flex items-center">
