--- a/views/front/set/setting.ejs
+++ b/views/front/set/setting.ejs
@@ -21,10 +21,10 @@
                 <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Reklam Ayarları <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
             <hr style="margin-top: 22px;">
-            <span class="badge">
+            <!-- <span class="badge">
                 <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> İstatistik <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
-            <hr style="margin-top: 22px;">
+            <hr style="margin-top: 22px;"> -->
             <span class="badge">
                 <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Koşullar <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
