--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -54,13 +54,13 @@
 
                     </div>
                     <hr style="background-color: steelblue; height: 1px; border: 0; margin-bottom: 10px;">
-                    <ul class="space-y-6">
+                    <ul class="space-y-6" >
                         <% sozluk.forEach(element => { %>
                             <li style="margin-top: 4px;">
-                                    <div class="flex items-start pl-3 space-x-4">
-                                        <a href="/profil">
-                                        <!-- <img src="../../../front/images/avatars/avatar-2.jpg" style="width: 40px; height: 40px;" class="rounded-full"> -->
-                                        </a>
+                            <div class="flex items-start pl-3 space-x-4" style="margin-left: -2vw;">
+                                        <!-- <a href="/profil">
+                                        <img src="../../../front/images/avatars/avatar-2.jpg" style="width: 40px; height: 40px;" class="rounded-full">
+                                        </a> -->
                                 <a href="/single/<%= element._id %>">
                                         
                                         <div class="flex-1">
