--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -84,15 +84,15 @@
                                             <table>
                                                 <tr>
                                                     <td>
-                                                        <div class="flex items-center">
+                                                        <!-- <div class="flex items-center">
                                                             <ion-icon name="share-social-outline" class="text-2xl">
                                                             </ion-icon>
                                                             <span class="text-sm">22</span>
-                                                        </div>
+                                                        </div> -->
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 28vw;" class="text-2xl"
+                                                            <ion-icon style="padding-left: 0vw;" class="text-2xl"
                                                                 name="heart-outline"></ion-icon>
                                                             <span class="text-sm">22</span>
                                                         </div>
