--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -75,16 +75,16 @@
                                                 <table>
                                                     <tr>
                                                         <td>
-                                                            <!-- <div class="flex items-center">
-                                                                <ion-icon name="share-social-outline"></ion-icon>
+                                                            <div class="flex items-center">
+                                                                <ion-icon name="logo-facebook"></ion-icon>
                                                                 <span class="text-sm">22</span>
-                                                            </div> -->
+                                                            </div>
                                                         </td>
                                                         <td>
-                                                            <!-- <div class="flex items-center">
-                                                                <ion-icon style="padding-left: 20vw;" name="heart-outline"></ion-icon>
+                                                            <div class="flex items-center">
+                                                                <ion-icon style="padding-left: 20vw;" name="logo-whatsapp"></ion-icon>
                                                                 <span class="text-sm">22</span>
-                                                            </div> -->
+                                                            </div>
                                                         </td>
                                                         <td>
                                                             <div class="flex items-center">
