--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -84,22 +84,27 @@
                                             <table>
                                                 <tr>
                                                     <td>
-                                                        <!-- <div class="flex items-center">
-                                                            <ion-icon name="share-social-outline" class="text-2xl">
-                                                            </ion-icon>
+                                                        <div class="flex items-center">
+                                                            <ion-icon name="logo-facebook" class="text-2xl"></ion-icon>
                                                             <span class="text-sm">22</span>
-                                                        </div> -->
+                                                        </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 0vw;" class="text-2xl"
+                                                            <ion-icon name="logo-facebook" style="padding-left: 12vw;" class="text-2xl"></ion-icon>
+                                                            <span class="text-sm">22</span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon style="padding-left: 12vw;" class="text-2xl"
                                                                 name="heart-outline"></ion-icon>
                                                             <span class="text-sm">22</span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 28vw;" class="text-2xl"
+                                                            <ion-icon style="padding-left: 12vw;" class="text-2xl"
                                                                 name="trash-outline"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
