--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -77,19 +77,26 @@
                                                         <td>
                                                             <div class="flex items-center">
                                                                 <ion-icon name="logo-facebook"></ion-icon>
-                                                                <span class="text-sm">22</span>
+                                                                <span class="text-sm"></span>
                                                             </div>
                                                         </td>
                                                         <td>
                                                             <div class="flex items-center">
-                                                                <ion-icon style="padding-left: 20vw;" name="logo-whatsapp"></ion-icon>
-                                                                <span class="text-sm">22</span>
+                                                                <ion-icon style="padding-left: 16vw;" name="logo-twitter"></ion-icon>
+                                                                <span class="text-sm"></span>
                                                             </div>
                                                         </td>
                                                         <td>
                                                             <div class="flex items-center">
-                                                                <ion-icon style="padding-left: 20vw;" name="chatbubble-ellipses-outline"></ion-icon>
-                                                                <span class="text-sm"><%= element.comment.length %>11 </span>
+                                                                <ion-icon style="padding-left: 16vw;" name="logo-whatsapp"></ion-icon>
+                                                                <span class="text-sm"></span>
+                                                            </div>
+                                                        </td>
+
+                                                        <td>
+                                                            <div class="flex items-center">
+                                                                <ion-icon style="padding-left: 16vw;" name="chatbubble-ellipses-outline"></ion-icon>
+                                                                <span class="text-sm"><%= element.comment.length %></span>
                                                             </div>
                                                         </td>
                                                     </tr>
