--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -86,25 +86,31 @@
                                                     <td>
                                                         <div class="flex items-center">
                                                             <ion-icon name="logo-facebook" class="text-2xl"></ion-icon>
-                                                            <span class="text-sm">22</span>
+                                                            <span class="text-sm"></span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon name="logo-facebook" style="padding-left: 12vw;" class="text-2xl"></ion-icon>
-                                                            <span class="text-sm">22</span>
+                                                            <ion-icon name="logo-facebook" style="padding-left: 9vw;" class="text-2xl"></ion-icon>
+                                                            <span class="text-sm"></span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 12vw;" class="text-2xl"
+                                                            <ion-icon name="logo-twitter" style="padding-left: 9vw;" class="text-2xl"></ion-icon>
+                                                            <span class="text-sm"></span>
+                                                        </div>
+                                                    </td>
+                                                    <td>
+                                                        <div class="flex items-center">
+                                                            <ion-icon style="padding-left: 9vw;" class="text-2xl"
                                                                 name="heart-outline"></ion-icon>
-                                                            <span class="text-sm">22</span>
+                                                            <span class="text-sm"></span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 12vw;" class="text-2xl"
+                                                            <ion-icon style="padding-left: 9vw;" class="text-2xl"
                                                                 name="trash-outline"></ion-icon>
                                                             <span class="text-sm"></span>
                                                         </div>
