--- a/views/front/single.ejs
+++ b/views/front/single.ejs
@@ -117,8 +117,10 @@
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
+                                                            <b>
+                                                            <ion-icon class="text-2xl" style="color:#03A9F4; font-weight:bolder; padding-left: 7vw;" name="checkmark-outline"></ion-icon>
 
-                                                            <ion-icon class="text-2xl" style="padding-left: 7vw;" class="text-2xl" style="color:#03A9F4; font-weight:bolder;" name="checkmark-outline"></ion-icon>
+                                                            </b>
                                                             <span class="text-sm"></span>
                                                         </div>
                                                     </td>
